<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:id="@+id/main"
    android:background="@color/teal"
    tools:context=".LogIn">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="WORK COMPLETE"
        android:layout_gravity="center"

        android:paddingBottom="0dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="AWESOME JOB!"
        android:layout_gravity="center"
        android:padding="0dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="20dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="8dp"
            android:background="@color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/review_expert"
                android:text="RATE EXPERT"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:padding="8dp"
                android:textColor="@color/teal"
                android:textSize="18sp"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/white"
                android:orientation="horizontal"
                android:padding="0dp">


                <RatingBar
                    android:id="@+id/rating"
                    style="@style/CustomRatingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="43dp"
                    android:isIndicator="false"
                    android:numStars="5"
                    android:padding="0dp"
                    android:progressTint="@color/yellow"
                    android:scaleX="0.7"
                    android:scaleY="0.7"
                    android:stepSize="1" />


            </LinearLayout>

            <EditText
                android:layout_width="270dp"
                android:layout_height="40dp"
                android:id="@+id/expert_comment"
                android:background="@color/grey"
                android:layout_marginTop="4dp"
                android:layout_marginLeft="35dp"
                android:padding="8dp"
                android:hint="Leave a comment"
                android:drawablePadding="8dp"
                android:textColor="@color/black"/>

            <Button
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:text="Submit"
                android:id="@+id/submit_review"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="100dp"
                android:backgroundTint="@color/teal"
                app:cornerRadius = "20dp"/>



        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="KARIBU TENA. AJIRA"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:padding="8dp"
            android:textColor="@color/white"
            android:textSize="25sp"
            />


        <ImageView
            android:id="@+id/logo_image"
            android:layout_width="80dp"
            android:layout_height="95dp"
            android:layout_gravity="center"
            android:layout_marginBottom="25dp"
            android:paddingTop="0dp"
            android:src="@drawable/ajiralogo" />
    </LinearLayout>




</LinearLayout>