...

                    <RadioButton
                        android:id="@+id/radio_expert"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...
                    android:drawableLeft="@drawable/baseline_lock_24"
                    android:drawablePadding="8dp"
                    android:hint="Password"
                    android:padding="8dp"
                    android:textColor="@color/black"
...

                    <EditText
                        android:id="@+id/firstname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                    <EditText
                        android:id="@+id/lastname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                        <RadioButton
                            android:id="@+id/radio_male"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                    <EditText
                        android:id="@+id/dob"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                        <AutoCompleteTextView
                            android:id="@+id/autocompleteTextView"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
...

                    <EditText
                        android:id="@+id/service_charge"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                    <EditText
                        android:id="@+id/phonenumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                    <EditText
                        android:id="@+id/location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...
                    <!-- Image upload section -->
                    <Button
                        android:id="@+id/upload_id_button"
                        android:layout_width="190dp"
                        android:layout_height="wrap_content"
...
                    <!-- TextView to show the uploaded file name -->
                    <TextView
                        android:id="@+id/id_filename"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...
                    <!-- Button to upload good conduct -->
                    <Button
                        android:id="@+id/upload_good_conduct_button"
                        android:layout_width="190dp"
                        android:layout_height="wrap_content"
...
                    <!-- TextView to show the uploaded file name -->
                    <TextView
                        android:id="@+id/good_conduct_filename"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                <Button
                    android:id="@+id/signup_button"
                    android:layout_width="140dp"
                    android:layout_height="50dp"
...
